# ocgui

./: .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPORT_2026-02-01_Phase1.md  blueprint.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: blank.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: iterate.yml  pull.yml
.opencode/: INTEGRATION_REPORT.md  SETUP_SUMMARY.md  VERIFICATION_REPORT.md  config.json  oh-my-opencode.json
.opencode/agents/: TechLead.md  cmz.md
docs/: bug.md  storx-report.md  task.md
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: store.test.ts  types.test.ts
src/components/: AgentCard.test.tsx  AgentCard.tsx  AgentFormFields.tsx  AppTabs.test.tsx  AppTabs.tsx  CreateAgentModal.test.tsx  CreateAgentModal.tsx  EditAgentModal.test.tsx  EditAgentModal.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  SettingsSection.test.tsx  SettingsSection.tsx  SkillsSection.test.tsx  SkillsSection.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  index.ts  tabIcons.test.tsx  tabIcons.tsx
src/config/: constants.ts  index.ts
src/constants/: index.test.ts  index.ts
src/hooks/: index.ts  useAgentForm.test.ts  useAgentForm.ts  useAgentSearch.test.ts  useAgentSort.ts  (+10 more)
(+64 files in other folders)
