[package]
name = "ocgui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "8.2"
rusqlite = { version = "0.38", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
